[AM] Fixed ts issues, removed tsconfig

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
-  <gnr-app>Loading...</gnr-app>
+  <app-gnr>Loading...</app-gnr>
 </body>
 </html>
